# save-cloud-vita

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-modules  build.rs
.vim/: coc-settings.json
assets/sce_sys/livearea/contents/: template.xml
assets/sce_sys/resources/: font.pgf  kernel.skprx  user.suprx
c/: .clangd  compile_commands.json  ime.c  tai.c  v2d.c  v2d.h
src/: app.rs  constant.rs  ime.rs  lib.rs  log.rs  main.rs  tai.rs  ui.rs  utils.rs  vita2d.rs
src/ui/: ui_base.rs  ui_cloud.rs  ui_desktop.rs  ui_dialog.rs  ui_drawer.rs  ui_list.rs  ui_loading.rs  ui_scroll_progress.rs  ui_titles.rs  ui_toast.rs
src/ui/ui_cloud/: action.rs  list_state.rs  menu.rs  panel.rs
src/ui/ui_cloud/action/: cloud.rs  local.rs
src/ui/ui_titles/: game_menu.rs  save_menu.rs
src/ui/ui_titles/game_menu/: game_list.rs
src/ui/ui_titles/save_menu/: save_list.rs
src/ui/ui_titles/save_menu/save_list/: save_list_cloud.rs  save_list_local.rs
